--- a/section-get-started-thebralab.liquid
+++ b/section-get-started-thebralab.liquid
@@ -14,6 +14,16 @@
          <p class="overlay-section">Get the list for new size releases.</p>
          <div class="newsletter">
            <p class="message"></p>
+           {% if section.settings.enable_klaviyo %}
+           <form action="https://manage.kmail-lists.com/subscriptions/subscribe?a=LrAMeY&g=QLGgJB" id="email_signup" method="post" name="mc-embedded-subscribe-form" class="contact-form" target="_blank">
+             {% comment %}
+             <input type="text" value="" name="FNAME" placeholder="{{ 'general.newsletter_form.subscriber_first_name' | t }}">
+             <input type="text" value="" name="LNAME" placeholder="{{ 'general.newsletter_form.subscriber_last_name' | t }}">
+             {% endcomment %}
+             <input type="email" value="" name="EMAIL" class="contact_email" placeholder="{{ 'general.newsletter_form.placeholder' | t }}">
+             <input type="submit" value="{{ 'general.newsletter_form.submit' | t }}" class="action_button sign_up" name="subscribe" />
+           </form>
+           {% else %}
            {% form 'customer' %}
            {% if form.posted_successfully? %}
            <p><em>{{ 'general.newsletter_form.success_text' | t }}</em></p>{% elsif form.errors %}{% for field in form.errors %}
@@ -24,7 +34,10 @@
            <input type="email" class="transparent-field" id="email" name="contact[email]" required pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" placeholder="email address" />
            <button type='submit' class="btn newsletter-button">{{ 'general.newsletter_form.submit' | t }}</button>
            {% endform %}
+           {% endif %}
          </div>
+         <script type="text/javascript" src="//www.klaviyo.com/media/js/public/klaviyo_subscribe.js"></script>
+         <script type="text/javascript"> KlaviyoSubscribe.attachToForms('#email_signup', { hide_form_on_success: true }); </script>
       </div>
     </section>
     <section class="section question activate" id="section-get-started">
@@ -394,9 +407,7 @@ html{padding-bottom: 0 !important;}.content {padding: 50px 0px 0px 0px !importan
 </style>
 
 <script type="text/javascript">
-  
  $(document).ready(function() {
-   
    $(document).on('click', '.next-section', function(e) {
      $('.section').removeClass('activate').hide();
      if($(this).parents('.section').next('.section').length > 0) {
@@ -510,16 +521,16 @@ html{padding-bottom: 0 !important;}.content {padding: 50px 0px 0px 0px !importan
           dataType: 'json',
           timeout: 10000,
           beforeSend: function(){
-            $('.progress').html('<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">Adding product to cart</div>');
+            $('.progress').html('<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">Adding Product to Cart</div>');
             $('.progress-bar').animate({width: "20%"}, 100);
           },
-          success: function(data) { 
-            $('.progress-bar').animate({width: "100%"}, 100);
+          success: function(data) {
             setTimeout(function(){
-                $('.progress-bar').css({width: "100%"});
+                $('.progress-bar').css({width: "50%"});
                 setTimeout(function(){
-                    $('.progress').slideUp();
-                }, 100);
+                  $('.progress-bar').text('Products Added to Cart');//.slideUp();
+                  $('.progress-bar').animate({width: "100%"}, 100);
+                }, 3000);
             }, 1000);
             ajaxProduct(); console.log(tempId)
           },
@@ -610,6 +621,13 @@ html{padding-bottom: 0 !important;}.content {padding: 50px 0px 0px 0px !importan
 {% schema %}
   {
     "name": "Section Get Started",
-    "settings": []
+    "settings": [
+      {
+        "type": "checkbox",
+        "id": "enable_klaviyo",
+        "label": "Enable Klaviyo",
+        "default": true
+      }      
+    ]
   }
 {% endschema %}
