--- a/section-get-started-with-seprate-js-css.liquid
+++ b/section-get-started-with-seprate-js-css.liquid
@@ -3,7 +3,7 @@
     <a href="/"><img src="{{'the-bra-lab.png' | asset_url}}" alt="The Bra Lab"></a>
     <span class="right-menu"><span class="red-color">Free</span> <a href="/pages/shipping-returns">Exchanges & Returns!</a> <a href="#cart" class="icon-cart cart-button"><span>{{cart.item_count}}</span></a></span>
   </div>
-  <form method="post" action="/cart/add" accept-charset="UTF-8" class="main-wizard-form" enctype="multipart/form-data">
+  <div class="main-wizard-form">
   <div class="content-section">
     <input type="hidden" name="form_type" value="product">
     <input type="hidden" name="utf8" value="✓">
@@ -15,14 +15,26 @@
          <div class="newsletter">
            <p class="message"></p>
            {% if section.settings.enable_klaviyo %}
+           <form id="email_signup" class="klaviyo_styling klaviyo_gdpr_embed_{{section.settings.klaviyo_list_id}} email-capture__form" action="//manage.kmail-lists.com/subscriptions/subscribe" data-ajax-submit="//manage.kmail-lists.com/ajax/subscriptions/subscribe" method="GET" target="_blank" novalidate="novalidate">
+             <input type="hidden" name="g" value="{{section.settings.klaviyo_list_id}}">
+             <label for="k_id_email" class="sr-only email-capture__label" style="display:none;">Email Address</label>
+             <input class="email-capture__input transparent-field" type="email" value="" name="email" id="k_id_email" placeholder="email123@gmail.com"/>
+             <button type="submit" class="klaviyo_submit_button btn newsletter-button">Subscribe</button>
+             <div class="klaviyo_messages">
+               <p class="success_message" style="display:none;"></p>
+               <p class="error_message" style="display:none;"></p>
+             </div>
+           </form>
+           {% comment %}
            <form action="https://manage.kmail-lists.com/subscriptions/subscribe?a=LrAMeY&g=QLGgJB" id="email_signup" method="post" name="mc-embedded-subscribe-form" class="contact-form" target="_blank">
-             {% comment %}
              <input type="text" value="" name="FNAME" placeholder="{{ 'general.newsletter_form.subscriber_first_name' | t }}">
              <input type="text" value="" name="LNAME" placeholder="{{ 'general.newsletter_form.subscriber_last_name' | t }}">
-             {% endcomment %}
              <input type="email" value="" name="EMAIL" class="transparent-field" placeholder="email address">
              <button type='submit' name="subscribe" class="btn newsletter-button">{{ 'general.newsletter_form.submit' | t }}</button>
            </form>
+           <script type="text/javascript" src="//www.klaviyo.com/media/js/public/klaviyo_subscribe.js"></script>
+           <script type="text/javascript"> KlaviyoSubscribe.attachToForms('#email_signup', { hide_form_on_success: true }); </script>
+           {% endcomment %}
            {% else %}
            {% form 'customer' %}
            {% if form.posted_successfully? %}
@@ -37,7 +49,7 @@
            {% endif %}
          </div>
          <script type="text/javascript" src="//www.klaviyo.com/media/js/public/klaviyo_subscribe.js"></script>
-         <script type="text/javascript"> KlaviyoSubscribe.attachToForms('#email_signup', { hide_form_on_success: true }); </script>
+         <script type="text/javascript"> KlaviyoSubscribe.attachToForms('#email_signup', { hide_form_on_success: true, extra_properties: { $source: 'HomePageSignUp', Brand: 'Klaviyo' } }); </script>
       </div>
     </section>
     <section class="section question activate" id="section-get-started">
@@ -401,7 +413,7 @@
      </div>
     </section>
     </div>
-  </form>
+  </div>
 </div>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,800&display=swap" rel="stylesheet">
 {{ 'codehouse.css' | asset_url | stylesheet_tag }}
@@ -415,7 +427,14 @@
         "id": "enable_klaviyo",
         "label": "Enable Klaviyo",
         "default": true
-      }      
+      },
+      {
+        "type": "text",
+        "id": "klaviyo_list_id",
+        "label": "Klaviyo List ID",
+        "default": "QLGgJB",
+        "info": "Write Klaviyo LIST_ID here"
+      }
     ]
   }
 {% endschema %}
